feat (distribution) Внедрить Spring DI в distribution